--- a/3proxy.cfg
+++ b/3proxy.cfg
@@ -15,7 +15,7 @@ timeouts 1 5 30 60 180 1800 15 60
 #internal YOURSERVERIP
 #Create users proxyuser1 and proxyuser2 and specify a password
 #
-users $/etc/3proxy/.proxyauth
+users $/etc/.proxyauth
 #Specify daemon as a start mode
 #
 daemon
