--- a/3proxy_2IP.cfg
+++ b/3proxy_2IP.cfg
@@ -35,6 +35,6 @@ auth strong
 flush
 allow username
 maxconn 384
-proxy -n -p3128 a -i123.456.7.01 -e123.456.7.01
-proxy -n -p3128 a -i123.456.7.02 -e123.456.7.02
+proxy -n -p3128 -a -i123.456.7.01 -e123.456.7.01
+proxy -n -p3128 -a -i123.456.7.02 -e123.456.7.02
 #replace 'proxy'above for 'socks' to converto to socks proxy
