--- a/3proxy_2IP.cfg
+++ b/3proxy_2IP.cfg
@@ -1,5 +1,5 @@
 ##Main##
-
+#Edit
 #Starting 3proxy as a service/daemon
 daemon
 
@@ -37,4 +37,5 @@ allow username
 maxconn 384
 proxy -n -p3128 -a -i123.456.7.01 -e123.456.7.01
 proxy -n -p3128 -a -i123.456.7.02 -e123.456.7.02
+#replace above IPs with your server IPs
 #replace 'proxy'above for 'socks' to converto to socks proxy
