Update and rename 3proxy_2IP.cfg to 3proxy_multiple_ips.cfg

--- a/3proxy_multiple_ips.cfg
+++ b/3proxy_multiple_ips.cfg
@@ -1,5 +1,4 @@
 ##Main##
-#Edit
 #Starting 3proxy as a service/daemon
 daemon
 
@@ -13,7 +12,7 @@ nscache 65536
 #CL = Clear Text, CR = Encrypted Passswords (MD5)
 #Add MD5 users with MD5 passwords with "" (see below)
 #users "user:CR:$1$lFDGlder$pLRb4cU2D7GAT58YQvY49."
-users username:CL:strongpassword
+users $/etc/.proxyauth
 
 #Logging
 log /var/log/3proxy/3proxy.log D
@@ -30,11 +29,11 @@ auth strong
 #internal 0.0.0.0
 
 #SOCKS5
-#allow * * 192.168.0.0/16
-auth strong
-flush
-allow username
-maxconn 384
+deny * * 127.0.0.1,192.168.1.1
+allow * * * 80-88,8080-8088 HTTP
+allow * * * 443,8443 HTTPS
+#allow * * * 1-65535 HTTP
+#allow * * * 1-65535 HTTPS
 proxy -n -p3128 -a -i123.456.7.01 -e123.456.7.01
 proxy -n -p3128 -a -i123.456.7.02 -e123.456.7.02
 #replace above IPs with your server IPs
