--- a/3proxy_multiple_ips.cfg
+++ b/3proxy_multiple_ips.cfg
@@ -37,4 +37,4 @@ allow * * * 443,8443 HTTPS
 proxy -n -p3128 -a -i123.456.7.01 -e123.456.7.01
 proxy -n -p3128 -a -i123.456.7.02 -e123.456.7.02
 #replace above IPs with your server IPs
-#replace 'proxy'above for 'socks' to converto to socks proxy
+#replace 'proxy' above for 'socks' to convert to a socks proxy
